# labs_numerical_methods

./: .clang-format  .gitignore  CMakeLists.txt
danilevsky/: danilevsky.h
labs/: CMakeLists.txt  lab_1.cpp  lab_2.cpp  lab_3.cpp  lab_4.cpp  lab_5.cpp  lab_6.cpp  lab_7.cpp  lab_8.cpp  lab_9.cpp
linalg/: CMakeLists.txt  matrix.cpp  operations.cpp  solvers.cpp  vector.cpp
