add_executable(lab1 lab_1.cpp)
target_link_libraries(lab1 linalg)

add_executable(lab2 lab_2.cpp)
target_link_libraries(lab2 linalg)

add_executable(lab3 lab_3.cpp)
target_link_libraries(lab3 linalg)

add_executable(lab4 lab_4.cpp)
target_link_libraries(lab4 linalg)

add_executable(lab5 lab_5.cpp)
target_link_libraries(lab5 linalg)

add_executable(lab6 lab_6.cpp)
target_link_libraries(lab6 linalg)

add_executable(lab7 lab_7.cpp)
target_link_libraries(lab7 linalg)

add_executable(lab8 lab_8.cpp)
target_link_libraries(lab8 linalg)